# llama3-8b-text-to-sql

./: README.md  pyproject.toml
llama3_8b_instruct_text_to_sql/: main.py
